k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-hw02-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arch-hw02-app
  template:
    metadata:
      labels:
        app: arch-hw02-app
    spec:
      volumes:
        - name: sql
          configMap:
            name: postgres-configmap
      containers:
        - name: arch-hw02
          image: giggaherzz/arch-hw02:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 1
            periodSeconds: 10
