k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-hw02-service
spec:
  selector:
    app: arch-hw02-app
  ports:
    - port: 8080
      targetPort: http
